# python-fast-api-server

./: .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: logging_config.py  main.py
src/application/: orders.py  password_protect.py  profiling.py  users.py
src/application/authentication/: dependency_injection.py
src/config/: __init__.py
src/domain/authentication/: models.py
src/domain/orders/: models.py
src/domain/users/: models.py  repository.py
src/infrastructure/application/: factory.py
src/infrastructure/database/: repository.py  tables.py
src/infrastructure/database/migrations/versions/: 69888b706120_.py
src/infrastructure/models/: base.py
src/presentation/rest/: __init__.py  auth.py  orders.py  profiling.py  users.py
src/templates/: profilers.html
tests/: test_main.py
