[tool.poetry]
name = "medium-fastapi-layered-2023"
version = "0.1.0"
description = ""
authors = ["sanglq3 <sanglq3@vng.com.vn>"]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = { version = "~2.0", extras = ["asyncio", "mypy"] }
aiosqlite = "~0.19"
alembic = "~1.10"
fastapi = "0.92.0"
greenlet = "~2.0"
gunicorn = "~20.1"
loguru = "~0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = { version = "~1.10", extras = ["dotenv"] }
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "~0.21.0"
websockets = "~11.0"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "~23.1"
httpx = "~0.23"
hypothesis = "~6.68"
isort = "~5.12"
mypy = "~1.0"
pre-commit = "~3.1"
pydantic-factories = "~1.17"
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-env = "~0.8"
pytest-lazy-fixture = "~0.6"
pytest-mock = "~3.10"
ruff = "~0.0.261"
sqlalchemy-stubs = "~0.4"
types-passlib = "~1.7"
types-python-jose = "~3.3"
